# DMS

./: .gitignore  README.md  conftest.py  pyproject.toml
control_plane/: README.md  agent_cli.py  example_agent.yml  example_master.yml  master_cli.py  requirements-dev.txt  requirements.txt
control_plane/dms_agent/: __init__.py  client.py  config.py
control_plane/dms_master/: __init__.py  app.py  config.py  logging_utils.py  metadata.py  models.py  server.py
control_plane/dms_master/scheduler/: base.py  round_robin.py
control_plane/tests/: conftest.py  test_agent_cli.py  test_agent_client_runtime.py  test_agent_config.py  test_app_config.py  test_master.py  test_master_app.py  test_master_cli.py  test_scheduler.py
cpp/: CMakeLists.txt
cpp/src/: tcp_transfer.cpp
data_plane/: CMakeLists.txt
data_plane/include/dms/: checksum.hpp  file_chunker.hpp  network.hpp  transfer_manager.hpp
data_plane/src/: checksum.cpp  file_chunker.cpp  network.cpp  transfer_manager.cpp
data_plane/tests/: test_checksum.cpp  test_file_chunker.cpp  test_transfer_manager.cpp
dms/: config.py  logging_utils.py
dms/common/: chunker.py  filesystem.py
dms/control/: __init__.py  agent.py  master.py
dms/control/policies/: __init__.py  base.py  registry.py  round_robin.py  test_policy.py
dms/data/: base.py  rdma.py  tcp.py
dms/proto/: dms.proto  dms_pb2.py  dms_pb2_grpc.py
docker/: Dockerfile  build.sh  hello_mpi.c  test_ucx.sh
scripts/: agent_server.py  master_server.py
tests/: test_chunker.py  test_master_scheduler.py  test_tcp_data_plane.py
