[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dms"
version = "0.1.0"
description = "High performance data moving service"
authors = [{ name = "DMS" }]
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
